fix(preview): Markdown component layout breaks on copy-paste (#3510)
- Made textaret instead of a contenteditable element

--- a/packages/ngx-widgets/src/app/markdown/markdown.component.less
+++ b/packages/ngx-widgets/src/app/markdown/markdown.component.less
@@ -35,6 +35,15 @@
       tr:nth-child(even) {
         background-color: @color-pf-black-150;
       }
+      ul {
+        display: block;
+        list-style-type: disc;
+        margin-block-start: 1em;
+        margin-block-end: 1em;
+        margin-inline-start: 0px;
+        margin-inline-end: 0px;
+        padding-inline-start: 40px;
+      }
     }
     .placeholder {
       font-size: 1em;
@@ -48,6 +57,8 @@
       padding-right: 30px;
       padding-bottom: 10px;
       padding-left: 10px;
+      border: none;
+      resize: none;
     }
     .editor-icon-container {
       position: relative;
